First  hly + head.......

--- a/views/lz_connect.ejs
+++ b/views/lz_connect.ejs
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="/stylesheets/lz_css.css">
   <script src="/js/jquery.min.js" charset="utf-8"></script>
 </head>
-<%- include("lz_head") %>
+<%- include("lz_h_head") %>
 
 <div class="lz-body-con">
   <div class="connect">
