3.... 这是一次大的变革。。。。3.... 这是一次大的变革。。。。3.... 这是一次大的变革。。。。

--- a/public/sass/css.scss
+++ b/public/sass/css.scss
@@ -321,6 +321,7 @@
         }
         sub {
           color: red;
+          text-indent: 0px;
           vertical-align: baseline;
           font-size: 30px;
           display: inline-block;
