Lz + Ljs ...foot样式。。。。

--- a/views/lz_foot.ejs
+++ b/views/lz_foot.ejs
@@ -1,6 +1,6 @@
 <!-- 页面底部。有版心，。。。。 -->
   <head>
-    <link rel="stylesheet" href="/font_picture/iconfont.css">
+    <link rel="stylesheet" href="/l_font_ico/iconfont.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/lz_css.css">
   </head>
@@ -13,10 +13,10 @@
         010-53563799
       </div>
       <div class="lz-foot-wjs-tall">
-        <h3><i class="icon iconfont icon-iconfontfuwushichang"></i> 联系客服</h1>
+        <h3><i class="icon iconfont icon-kefu"></i> 联系客服</h1>
           <h3>关注我们：
-            <i class="icon iconfont icon-iconfontgongyichongwu"></i>
-            <i class="icon iconfont icon-gerenshimingrz"></i>
+            <i class="icon iconfont icon-weixin"></i>
+            <i class="icon iconfont icon-xinlang"></i>
           </h1>
           <div class="lz-foot-wjs-tall-con">
             <img src="/images/gswj.png" alt="工商管理">
@@ -50,14 +50,14 @@
     <div class="lz-foot-huh">
       <h1>合作伙伴</h1>
       <ul>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
-        <li><i class="icon iconfont icon-iconfontfangzhipige"></i></li>
+        <li><i class="icon iconfont icon-yinlianzhifu" style="font-size:42px;"></i></li>
+        <li><i class="icon iconfont icon-huaxingyinhang" style="font-size:63px;"></i></li>
+        <li><i class="icon iconfont icon-11" style="font-size:59px;"></i></li>
+        <li><i class="icon iconfont icon-bravologo" style="font-size:27px;"></i></li>
+        <li><i class="icon iconfont icon-iconcfca" style="font-size:62px;"></i></li>
+        <li><i class="icon iconfont icon-baidu" style="font-size:10px;"></i></li>
+        <li><i class="icon iconfont icon-logo" style="font-size:20px;"></i></li>
+        <li><i class="icon iconfont icon-icon-test" style="font-size:52px;"></i></li>
       </ul>
     </div>
 
@@ -75,14 +75,14 @@
         </ul>
       </h3>
       <ul>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
-        <li><i class="icon iconfont icon-huanhuobz"></i></li>
+        <li><i class="icon iconfont icon-logo1" style="color:#000"></i></li>
+        <li><i class="icon iconfont icon-logo2" style="color:#000"></i></li>
+        <li><i class="icon iconfont icon-logo3" style="color:#000"></i></li>
+        <li><i class="icon iconfont icon-font-logo" style="color:#000"></i></li>
+        <li><i class="icon iconfont icon-logo11" style="color:#000"></i></li>
+        <li><i class="icon iconfont icon-LOGO" style="color:#000"></i></li>
+        <li><i class="icon iconfont icon-LOGO1" style="color:#000"></i></li>
+        <li><i class="icon iconfont icon-logo4" style="color:#000"></i></li>
       </ul>
     </div>
   </div>
