--- a/views/lz_h_head.ejs
+++ b/views/lz_h_head.ejs
@@ -1,12 +1,12 @@
 
     <link rel="stylesheet" href="/stylesheets/h_style.css">
-    <link rel="stylesheet" type="text/css" href="/h_font/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="/l_font_ico/iconfont.css">
 
     <div class="xs-top">
       <div class="xs-w">
         <div class="xs-left">
           <span class="xs-left-1">
-            <i class="iconfont icon-dianhua1"></i>
+            <i class="iconfont icon-dianhua"></i>
             客服电话：4006 / 010-53563799/ (9:00~21:00)
           </span>
           <span class="xs-left-2">|</span>
@@ -19,7 +19,7 @@
           <span class="xs-left-2">|</span>
           <span class="xs-left-1">
             <a class="xs-img1" href="#">
-                <i class="iconfont icon-dianhua"></i>
+                <i class="iconfont icon-shouji-copy"></i>
               移动客户端
             <img src="/images/app-qrcode.jpg" alt="" class="xs-img">
             </a>
@@ -35,7 +35,7 @@
           <span class="xs-left-2">|</span>
           <span class="xs-left-1">
             <a href="#">
-              <i class="iconfont icon-qiandai"></i>
+              <i class="iconfont icon-qian"></i>
               财富登录
             </a>
           </span>
