--- a/public/stylesheets/h_style.css
+++ b/public/stylesheets/h_style.css
@@ -352,38 +352,183 @@ body {
   text-decoration: none;
   margin-left: 633px;
 }
-.xs-foot {
-  background: #333;
-  padding: 20px 0;
+.xs-zy2-1 {
+  height: 308px;
 }
-.xs-foot-1 {
-  padding: 10px 0 30px 0;
-  display: table;
-  color: #ccc;
-}
-.xs-foot-2 {
-  height: 266px;
+
+.xs-zy2-tu {
   float: left;
+  border: 1px solid #e3e3e3;
+}
+.xs-zy2-1 dl {
+  padding: 0 0 0 40px;
+  margin-top: 10px;
+  float: left;
+}
+.xs-zy2-1 dl dt {
+  font-size: 20px;
+  padding: 0 0 6px 13px;
+  color: #ff9201;
+}
+.xs-zy2-1 dl dd {
+  font-size: 14px;
+  line-height: 28px;
+  border-bottom: 1px dashed #ccc;
+  margin: 0;
+  padding: 8px 15px;
+  letter-spacing: 2px;
+}
+.xs-zy2-tu1 {
+  float: right;
+  max-width: 155px;
+  width: 100%;
+  padding-top: 20px;
+}
+.xs-zy-4 h2{
+  padding: 35px 0 15px 0;
+  font-size: 22px;
+  font-weight: normal;
+}
+.xs-h2 {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background: #dd2c37;
+  line-height: 8px;
+  margin-right: 10px;
+}
+.xs-zy-4 p {
+  line-height: 32px;
+}
+.xs-red {
+  color: #f00;
+}
+.xs-orange {
+  text-decoration: none;
+  color: #ff9201;
+}
+.xs-h3 {
+  padding: 35px 0 15px 0;
+  font-size: 22px;
+  font-weight: normal;
+}
+.xs-ul {
+  list-style: none;
+}
+.xs-ul li {
+  line-height: 32px;
+}
+.xs-li {
+  padding-top: 10px;
+}
+.xs-span {
+  font-size:14px;
+  color: #666;
+}
+.xs-table {
+  width: 100%;
+  border: 1px #c6cbcf solid;
   font-size: 14px;
 }
-.xs-foot-2 h3 {
-  border: 1px solid #fff;
-  color: #fff;
-  margin-top: 13px;
-  font-size: 25px;
-  letter-spacing: 2px;
-  padding: 4px 6px;
-  width: 215px;
+.xs-tr {
+  background: #f2f2f2;
+}
+.xs-tr th {
+  border-right: 1px solid #e0e3e5;
+  padding: 13px 10px;
+  color: #666;
+  line-height: 26px;
   text-align: center;
-  border-radius: 2px;
 }
-.xs-foot-2 p span {
-  padding: 11px 0;
+.xs-tr1 {
+  background: #fdfdfd;
+}
+.xs-tr1 td {
+  border-right: 1px solid #e0e3e5;
+  padding: 13px 10px;
+  color: #666;
+  line-height: 26px;
+}
+.xs-tr td {
+  border-right: 1px #e0e3e5 solid;
+  padding: 13px 10px;
+  color: #666;
+  line-height: 26px;
+}
+.xs-tr1 td:nth-child(2) {
+  background: url("/images/g-icon1.png") right center no-repeat;
+  background-position-x: 96%;
+  padding-right: 50px;
+}
+.xs-tr1 td:nth-child(3) {
+  background: url("/images/g-icon2.png") right center no-repeat;
+  background-position-x: 94%;
+}
+.xs-tr td:nth-child(2) {
+  background: url("/images/g-icon1.png") right center no-repeat;
+  background-position-x: 96%;
+  padding-right: 50px;
+}
+.xs-tr td:nth-child(3) {
+  background: url("/images/g-icon2.png") right center no-repeat;
+  background-position-x: 94%;
+}
+.xs-p {
+  text-align: center;
+  padding: 20px 0 50px 0;
+}
+.xs-zy3-1 ul{
+  list-style: none;
+}
+.xs-vip-1 {
+  height: 150px;
+  border-bottom: 1px solid #ccc;
+}
+.xs-zy3-1 ul li img {
+  width: 140px;
+  float: left;
+  padding-right: 20px;
+}
+.xs-vip {
+  padding-top: 20px;
+}
+.xs-vip1 {
+  text-align: left;
+  padding: 30px 0 20px 0;
+  color: #333;
+  font-size: 20px;
+}
+.xs-vip2 {
+  display: table;
+  line-height: 28px;
+  font-size: 14px;
+  color: #666;
+}
+.xs-vip3 {
+  padding: 40px 0 25px 0;
+  text-align: center;
+  color: #333;
+  font-size: 20px;
+}
+.xs-vip-2 {
+  text-align: center;
+  float: left;
+  width: 30%;
+}
+.xs-vip-2 li:nth-child(1) {
+  height: 100px;
+  margin-left: 65px;
+}
+.xs-vip4 {
+  font-size: 15px;
+  padding: 10px 0;
   display: inline-block;
-  font-size:14px;
+  font-weight: bold;
+  color: #333;
 }
-.xs-foot-2 p a {
-  color: #ccc;
-  text-decoration: none;
-  font-size:14px;
+.xs-vip5 {
+  text-align: left;
+  color: #666;
+  font-size: 14px;
+  line-height: 28px;
 }
