--- a/views/h_xs-02.ejs
+++ b/views/h_xs-02.ejs
@@ -85,7 +85,7 @@
               什么样的风控才可靠？
               <span class="xs-span">基本法则：小额分散，大数法则</span>
             </h2>
-            <table class="xs-table">
+            <table class="xs-table" cellspacing="0">
               <tbody>
                 <tr class="xs-tr">
                   <th width="18%">类别</th>
