--- a/views/h_xs-03.ejs
+++ b/views/h_xs-03.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>微金所-成就亿万人的信用价值</title>
-    <link rel="stylesheet" href="/stylesheets/h_style.css">
-    <link rel="stylesheet" type="text/css" href="/h_font/iconfont.css">
-  </head>
-  <body>
-    <%- include("lz_h_head") %>
-    <img src="/images/guide1.jpg" alt=""style="width: 100%;">
+
+<head>
+  <meta charset="utf-8">
+  <title>微金所-成就亿万人的信用价值</title>
+  <link rel="stylesheet" href="/stylesheets/h_style.css">
+  <link rel="stylesheet" type="text/css" href="/h_font/iconfont.css">
+</head>
+
+<body>
+  <%- include("lz_h_head") %>
+    <img src="/images/guide1.jpg" alt="" style="width: 100%;">
     <div class="xs-zy">
       <div class="xs-zy-1">
         <div class="xs-zy-2">
@@ -41,6 +43,381 @@
                 <li class="xs-vip4">VIP投资通道</li>
                 <li class="xs-vip5">加入VIP投资人计划的用户可限时优先享受专属理财产品的购买权,包括V1标、V2标、V3标、V4标、V5标、V6标和V7标，普通用户在限制时间范围内无法购买VIP专属理财产品，产品经过更加严格的风控筛选，且在标的利率方面比普通产品要高可享受更高回报。</li>
               </ul>
+              <ul class="xs-vip-2">
+                <li><img src="/images/vip-img3.jpg" alt=""></li>
+                <li class="xs-vip4">大额众筹竞标，成交快速</li>
+                <li class="xs-vip5">VIP投资人的投资能力相对于普通散户投资人来说，单笔投资额度较高，VIP用户可利用专属投资权利和大额投资金额的双重优势，快速形成标的众筹满标，加速完成信贷资产的交易；配合官方提前预告，用户提前预约充值后，可形成“秒标”效应。</li>
+              </ul>
+              <ul class="xs-vip-2">
+                <li><img src="/images/vip-img4.jpg" alt=""></li>
+                <li class="xs-vip4">平台费用减免</li>
+                <li class="xs-vip5">VIP投资人在平台可免收短信服务费、实名认证费和平台管理费‘第三方支付渠道的充值费全部由平台垫付；普通用户提现需收取2元/笔手续费，VIP会员每年可享受不同次数的免费提现权利，完全享受投资乐趣。</li>
+              </ul>
+              <div class="xs-table-1">
+                <h3 class="xs-h4">成长体系表</h3>
+                <div class="xs-vip-3">
+                  <table class="xs-vip-4" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>会员等级</td>
+                      </tr>
+                      <tr>
+                        <td>等级图标</td>
+                      </tr>
+                      <tr>
+                        <td>累计年化投资额</td>
+                      </tr>
+                      <tr>
+                        <td>单日年化投资额</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>普通用户</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_1 .png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>0w</td>
+                      </tr>
+                      <tr>
+                        <td>0w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V1</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_2.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>10w</td>
+                      </tr>
+                      <tr>
+                        <td>5w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V2</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_3.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>20w</td>
+                      </tr>
+                      <tr>
+                        <td>10w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V3</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_4.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>40w</td>
+                      </tr>
+                      <tr>
+                        <td>20w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V4</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_5.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>80w</td>
+                      </tr>
+                      <tr>
+                        <td>40w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V5</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_6.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>150w</td>
+                      </tr>
+                      <tr>
+                        <td>75w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V6</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_7.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>300w</td>
+                      </tr>
+                      <tr>
+                        <td>150w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V7</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/vip_8.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>600w</td>
+                      </tr>
+                      <tr>
+                        <td>300w</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <div class="xs-clearfix"></div>
+                  <p class="xs-p-1">
+                    <span class="xs-red">*</span> V1注册之日起3个月内无投资，则降为普通会员。
+                  </p>
+                  <h4 class="xs-h5">
+                    <span class="xs-h5-1">会员权益介绍</span>
+                  </h4>
+                  <table class="xs-vip-4" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td colspan="2">会员等级</td>
+                      </tr>
+                      <tr>
+                        <td rowspan="2">升级奖励</td>
+                        <td>提现券</td>
+                      </tr>
+                      <tr>
+                        <td>加息券</td>
+                      </tr>
+                      <tr>
+                        <td colspan="2">开户周年礼包</td>
+                      </tr>
+                      <tr>
+                        <td colspan="2">生日礼包</td>
+                      </tr>
+                      <tr>
+                        <td colspan="2">减免转让费率</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>普通用户</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V1</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V2</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V3</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V4</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V5</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>0.10%</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V6</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>0.10%</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="xs-vip-5" cellspacing="0">
+                    <tbody>
+                      <tr>
+                        <td>V7</td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td><img src="/images/new-ok.png" alt=""></td>
+                      </tr>
+                      <tr>
+                        <td>0.10%</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <div class="xs-clearfix"></div>
+
+                </div>
+                <div class="xs-vip-9">
+                <ul class="xs-vip-5">
+                  <li><img src="/images/vip-img5.jpg" alt="" class="xs-vip-6"></li>
+                    <span class="xs-vip-7">如何获得VIP投资人资格？</span>
+                    <p class="xs-vip-8">您可以通过注册账户后累计年化投资额达到规定额度或者单日年化投资额达到规定额度获得对应级别的VIP权限，当累计到更高的年化投资额时， 可以升级高级别VIP获得更多专属权益。</p>
+                </ul>
+              </div>
+
+              </div>
             </div>
           </div>
 
@@ -50,5 +427,7 @@
       </div>
 
     </div>
-  </body>
+    <%- include("lz_foot") %>
+</body>
+
 </html>
