--- a/views/lz_foot.ejs
+++ b/views/lz_foot.ejs
@@ -1,7 +1,7 @@
 <!-- 页面底部。有版心，。。。。 -->
   <head>
     <link rel="stylesheet" href="/l_font_ico/iconfont.css">
-    <!-- <link rel="stylesheet" href="/stylesheets/style.css"> -->
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/lz_css.css">
   </head>
 <div class="lz-body-foot">
