--- a/public/stylesheets/h_style.css
+++ b/public/stylesheets/h_style.css
@@ -633,3 +633,16 @@ body {
   height: 170px;
   padding-top: 56px;
 }
+.xs-zy4-1 {
+  position: relative;
+}
+.xs-que {
+  border-bottom: 1px #dd3137 solid;
+  color: #dd3137;
+  display: inline-block;
+  height: 35px;
+  line-height: 35px;
+  padding: 0 30px;
+  position: absolute;
+  top: -25px;
+}
