--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
   <link rel="stylesheet" href="stylesheets/d-index.css">
   <link rel="stylesheet" href="stylesheets/iconfont.css">
   <title></title>
@@ -381,7 +381,7 @@
 
 
   <script src="javascripts/jquery.min.js"></script>
-  <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
   </script>
 </body>
