--- a/views/lz_h_head.ejs
+++ b/views/lz_h_head.ejs
@@ -1,7 +1,7 @@
 
     <link rel="stylesheet" href="/stylesheets/h_style.css">
     <link rel="stylesheet" type="text/css" href="/l_font_ico/iconfont.css">
-
+    <link rel="icon" href="/icons/favicon.ico" />
     <div class="xs-top">
       <div class="xs-w">
         <div class="xs-left">
@@ -45,7 +45,7 @@
           <a class="xs-right-1" href="#">进入存管专区</a>
           <a href="#">帮助中心</a>
           <span class="xs-left-2">|</span>
-          <a href="#">注册</a>
+          <a href="/g/login">注册</a>
           <a href="/g/logon">登录</a>
 
         </div>
